# streamies

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: codeql.yml  rust_check.yaml
src/: lib.rs  macros.rs  merge_round_robin.rs  try_streamies.rs
src/future_utils/: mod.rs  transpose_future_err.rs
src/futuries/: future_result.rs  mod.rs
src/smol_streamies/: mod.rs  ready_chunks.rs
src/streamies/: await_value.rs  mod.rs  unique.rs  unique_by.rs
src/streamies_structs/: collect_vec.rs  mod.rs
src/try_streamies/: chunks_ok.rs  extract_ok_future.rs  flatten_ok.rs  flatten_ok_iter.rs  flatten_ok_result.rs  flatten_ok_stream.rs  flatten_result.rs  mod.rs  nullify_err.rs  try_and.rs  try_ready_result.rs  unique_by_ok.rs  unique_ok.rs
src/try_streamies_structs/: collect_result_vec.rs  mod.rs
