[package]
name = "streamies"
description = "More features for your streams"
version = "0.2.2"
authors = ["RustyNova"]
repository = "https://github.com/RustyNova016/streamies"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.82.0"
keywords = ["stream", "data-structure", "async", "development"]


[dependencies]
futures = "0.3.31"
pin-project-lite = "0.2.16"
