[package]
name = "streamies"
description = "More features for your streams"
version = "0.3.0"
authors = ["RustyNova"]
repository = "https://github.com/RustyNova016/streamies"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.82.0"
keywords = ["stream", "data-structure", "async", "development"]


[dependencies]
futures = { version = "0.3.31", optional = true}
futures-lite = { version = "2.6.1", optional = true}
pin-project-lite = "0.2.16"

[features]
default = [ "futures"]

smol = ["dep:futures-lite"]
futures = ["dep:futures"]
